[package]
name = "bevy-stealth"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.1.2"
bevy = {version = "0.14.2"}
noise = "0.9.0"
once_cell = "1.20.2"
petgraph = "0.6.5"
rand = "0.8.5"
bevy_particle_systems = "0.13.0"
fastrand = "2.0.0"
